--- a/index.html
+++ b/index.html
@@ -332,12 +332,22 @@
               <p class="has-text-centered caption">With Predicted Schema</p>
             </div>
           </div>
+          <div class="columns is-vcentered">
+            <div class="column">
+              <img src="./static/videos/integration method (1).gif" alt="Without Predicted Schema" style="width: 100%;"> <!-- Changed video to img -->
+              <p class="has-text-centered caption">Verlet Integration (More Stable)</p>
+            </div>
+            <div class="column">
+              <img src="./static/videos/integration method (2).gif" alt="With Predicted Schema" style="width: 100%;"> <!-- Changed video to img -->
+              <p class="has-text-centered caption">Other Integration Method (Less Stable)</p>
+            </div>
+          </div>
           <ul>
             <li>Incorporating viscosity forces further reduced particle chaos, although excessively high viscosity values caused the fluid to break into separate clusters.</li>
           </ul>
           <div class="columns is-vcentered">
             <div class="column">
-              <img src="./static/videos/viscosity.gif" alt="Other Integration Method (Less Stable)" style="width: 100%;"> <!-- Changed video to img -->
+              <img src="./static/videos/viscosity.gif" alt="Verlet Method Without Viscosity (Less Stable)" style="width: 100%;"> <!-- Changed video to img -->
               <p class="has-text-centered caption">Other Integration Method (Less Stable)</p>
             </div>
             <div class="column">
