--- a/index.html
+++ b/index.html
@@ -348,11 +348,11 @@
           <div class="columns is-vcentered">
             <div class="column">
               <img src="./static/videos/viscosity.gif" alt="Verlet Method Without Viscosity (Less Stable)" style="width: 100%;"> <!-- Changed video to img -->
-              <p class="has-text-centered caption">Other Integration Method (Less Stable)</p>
+              <p class="has-text-centered caption">Without Viscosity (Less Stable)</p>
             </div>
             <div class="column">
               <img src="./static/videos/viscosity_(1).gif" alt="Verlet Method with Viscosity (More Stable)" style="width: 100%;"> <!-- Changed video to img -->
-              <p class="has-text-centered caption">Verlet Method with Viscosity (More Stable)</p>
+              <p class="has-text-centered caption"> With Viscosity (More Stable)</p>
             </div>
           </div>
         </div>
